# blueprint

./: .dockerignore  .gitignore  BENCHMARK_RESULTS.md  CODE_REVIEW_FIXES.md  Cargo.toml  DEPLOYMENT.md  DOOR_DETECTION_STATUS.md  Dockerfile  ENHANCEMENT_PLAN.md  FINAL_SUMMARY.md  INTEGRATION_ARCHITECTURE.md  PIPELINE_TEST_RESULTS.md  QUICKSTART.md  README.md  README_UPDATES.md  TESTING_SUMMARY.md  TEST_RESULTS.md  VISION_MODELS.md  VTRACER_CONFIG_TEST_RESULTS.md  WORK_SUMMARY_2025-11-09.md  YOLO_TRAINING_PROMPT.md  apply_best_vtracer_config.sh  biome.json  detected_rooms.json  floorplan_simplifier.py  fly.toml  justfile  requirements.txt  room_detection_graph.py  room_detection_image.py  room_detection_image_api.py  run_backend.sh  test-floorplan.json  test_all_vtracer_outputs.py  test_gpt5_nano_direct.py  test_integration.py  test_model_names.py  test_room_detection.py  test_svg_nano_pipeline.py  test_vision.py  (+1 more)
.claude/: settings.local.json
.taskmaster/: state.json
.taskmaster/docs/: discussion.md  prd-init.md
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
axum-backend/: Cargo.toml
axum-backend/src/: connected_components.rs  detector_orchestrator.rs  graph_builder.rs  image_preprocessor.rs  image_vectorizer.rs  main.rs  new_algorithms.rs  opencv_bridge.rs  room_detector.rs  vector_graph.rs  wall_merger.rs
docs/: IMPLEMENTATION_SUMMARY.md  TESTING.md
enhanced-cc-rust/src/: main.rs
hf-floorplan-loader/: Cargo.toml
hf-floorplan-loader/src/: lib.rs
leptos-frontend/: Cargo.toml  Trunk.toml  index.html
leptos-frontend/src/: canvas.rs  lib.rs  new_algorithms.rs
log_docs/: PROJECT_LOG_2025-11-08_cors-fix-and-vision-planning.md  PROJECT_LOG_2025-11-08_frontend-enhanced-detection-integration.md  PROJECT_LOG_2025-11-08_multi-method-detection-integration.md  PROJECT_LOG_2025-11-09_algorithm-1-flood-fill-parity-fix.md  PROJECT_LOG_2025-11-09_algorithm-fixes-connected-components.md  PROJECT_LOG_2025-11-09_frontend-detection-strategy-refactor.md  PROJECT_LOG_2025-11-09_frontend-ui-enhancement.md  PROJECT_LOG_2025-11-09_vision-model-optimization.md  PROJECT_LOG_2025-11-09_vtracer-gpt5nano-pipeline.md  current_progress.md
python-graph-rust/: Cargo.toml
python-graph-rust/src/: main.rs
room-detection-rust/: Cargo.toml
room-detection-rust/src/: main.rs
tauri-stretch/: Cargo.toml
test-data/: blueprint_base64.txt  test-3-rooms-horizontal.json  test-apartment-6-rooms.json  test-corridor.json  test-grid-4-rooms.json  test-l-shaped.json
test-floorplan/: Cargo.toml
test-floorplan/src/: main.rs
unified-detector/: Cargo.toml
unified-detector/src/: lib.rs  yolo.rs
validation-pipeline/: Cargo.toml
validation-pipeline/src/: main.rs  textract_parser.rs
vision-classifier/: Cargo.toml
vision-classifier/examples/: classify_image.rs
vision-classifier/src/: lib.rs
vtracer-test/src/: main.rs
vtracer_test/: Cargo.toml
vtracer_test/src/: main.rs
