[workspace]
resolver = "2"
members = [
    "leptos-frontend",
    "axum-backend",
    "tauri-stretch",
    "hf-floorplan-loader",
    "validation-pipeline",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.80"

[workspace.dependencies]
# Core async runtime
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Leptos frontend
leptos = { version = "0.7", features = ["csr", "nightly"] }
leptos_meta = { version = "0.7" }
leptos_router = { version = "0.7" }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["CanvasRenderingContext2d", "HtmlCanvasElement", "MouseEvent", "FileReader", "File", "FileList"] }
console_error_panic_hook = "0.1"
wasm-bindgen-futures = "0.4"

# Axum backend
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Graph and geometry libraries
petgraph = "0.6"
nalgebra = "0.33"
geo = { version = "0.28", features = ["use-serde"] }
ordered-float = "4.2"

# AWS SDK
aws-config = "1.5"
aws-sdk-textract = "1.50"

# Image processing
image = { version = "0.25", features = ["jpeg", "png"] }
csv = "1.3"

# Tauri
tauri = { version = "2.0", features = ["protocol-asset"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Dev tools
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
