[package]
name = "axum-backend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
petgraph.workspace = true
nalgebra.workspace = true
geo.workspace = true
ordered-float.workspace = true
aws-config.workspace = true
aws-sdk-textract.workspace = true
image.workspace = true
vtracer.workspace = true
regex = "1.10"
reqwest = { version = "0.12", features = ["json"] }
visioncortex.workspace = true
anyhow.workspace = true
base64.workspace = true
uuid.workspace = true
vision-classifier = { path = "../vision-classifier" }
unified-detector = { path = "../unified-detector" }
imageproc = "0.25"

[dev-dependencies]
criterion.workspace = true
hyper = "1.0"

# Note: To enable integration tests, refactor main.rs:
# 1. Move app logic to lib.rs
# 2. Expose create_app() as public function
# 3. Create tests/integration_tests.rs with HTTP tests
