[package]
name = "leptos-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
gloo-net = "0.6"
leptos.workspace = true
leptos_meta.workspace = true
leptos_router.workspace = true
wasm-bindgen.workspace = true
web-sys.workspace = true
wasm-bindgen-futures.workspace = true
console_error_panic_hook.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
js-sys = "0.3"
