[package]
name = "room-detection-python-graph-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
imageproc = "0.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
std::process = "1.0"
base64 = "0.22"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.svg]
version = "0.14"
features = ["serde"]

[dependencies.svg-parser]
version = "0.1"
