[package]
name = "validation-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
csv.workspace = true
image.workspace = true
hf-floorplan-loader = { path = "../hf-floorplan-loader" }
aws-config.workspace = true
aws-sdk-textract.workspace = true
petgraph.workspace = true
nalgebra.workspace = true
geo.workspace = true
