[package]
name = "vision-classifier"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["json"] }
tokio.workspace = true
base64.workspace = true
tracing.workspace = true
image.workspace = true
anyhow.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tracing-subscriber.workspace = true
